--- a/src/App.css
+++ b/src/App.css
@@ -65,6 +65,10 @@ body {
   font-family: var(--font);
   color: var(--gray);
   background-color: var(--white);
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  overflow-x: hidden; 
 }
 
 .hidden {
